--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/KulturnePodujatieForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/KulturnePodujatieForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
@@ -62,11 +62,13 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="stornoButton" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="pridateButton" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="hladatButton" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="hladatTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="stornoButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="hladatButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="hladatTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
