--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/ZobrazitPamiatkaForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/ZobrazitPamiatkaForm.form
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -25,140 +25,138 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Group type="102" alignment="1" attributes="0">
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Group type="102" attributes="0">
-                              <Component id="pamiatkaLabel" pref="115" max="32767" attributes="0"/>
-                              <EmptySpace min="-2" pref="70" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="1" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="KrajinaLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="MestoLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                          </Group>
-                      </Group>
-                      <EmptySpace max="32767" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="ZobrazPamiatkaLabel" min="-2" max="-2" attributes="0"/>
-                          <Group type="102" attributes="0">
-                              <Component id="datumLabel" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
-                              <Component id="ZobrazDatumlabel" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Component id="ZobrazMestoLabel" alignment="1" min="-2" max="-2" attributes="0"/>
-                          <Component id="ZobrazKrajinaLabel" alignment="1" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace pref="49" max="32767" attributes="0"/>
-                  </Group>
-              </Group>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="PoznámkyiLabel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
-                      <Component id="ZobrazPoznámkyLabel" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Group type="102" attributes="0">
-                          <Component id="HodnotenieLabel" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Component id="ZobrazHodnotenieLabel" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="hodinyLabel" min="-2" max="-2" attributes="0"/>
-                              <Component id="VstupneLabel" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="ZobrazHodinyLabel" min="-2" max="-2" attributes="0"/>
-                              <Component id="ZobrazVstupneLabel" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
-                  </Group>
-              </Group>
-              <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
-          </Group>
-          <Group type="102" attributes="0">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="NavštívenéCheckBox" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="135" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="73" max="-2" attributes="0"/>
                       <Component id="okButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="upravitButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="KrajinaLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="MestoLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="ZobrazMestoLabel" min="-2" max="-2" attributes="0"/>
+                                  <Component id="ZobrazKrajinaLabel" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="pamiatkaLabel" alignment="0" min="-2" pref="72" max="-2" attributes="0"/>
+                                  <Component id="datumLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="ZobrazDatumlabel" min="-2" max="-2" attributes="0"/>
+                                  <Component id="ZobrazPamiatkaLabel" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                      </Group>
+                      <EmptySpace pref="29" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="PoznámkyiLabel" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
+                              <Component id="ZobrazPoznámkyLabel" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Component id="HodnotenieLabel" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace max="32767" attributes="0"/>
+                                  <Component id="ZobrazHodnotenieLabel" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="hodinyLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="VstupneLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="1" attributes="0">
+                                      <Component id="ZobrazHodinyLabel" alignment="1" min="-2" max="-2" attributes="0"/>
+                                      <Component id="ZobrazVstupneLabel" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
+                          </Group>
+                      </Group>
                   </Group>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="KrajinaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ZobrazKrajinaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="hodinyLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ZobrazHodinyLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="KrajinaLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazKrajinaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="MestoLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazMestoLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="pamiatkaLabel" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
+                          <Component id="ZobrazPamiatkaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="hodinyLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazHodinyLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="VstupneLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazVstupneLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="HodnotenieLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazHodnotenieLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="PoznámkyiLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazPoznámkyLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazDatumlabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="datumLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="ZobrazMestoLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="MestoLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="VstupneLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ZobrazVstupneLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="ZobrazPamiatkaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="HodnotenieLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ZobrazHodnotenieLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="pamiatkaLabel" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="datumLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ZobrazDatumlabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="PoznámkyiLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ZobrazPoznámkyLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-              <Component id="NavštívenéCheckBox" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="NavštívenéCheckBox" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="okButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="upravitButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="42" max="32767" attributes="0"/>
+              <EmptySpace pref="57" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JButton" name="okButton">
+    <Component class="javax.swing.JLabel" name="datumLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="OK"/>
+        <Property name="text" type="java.lang.String" value="D&#xe1;tum:"/>
       </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="okButtonActionPerformed"/>
-      </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="upravitButton">
+    <Component class="javax.swing.JLabel" name="ZobrazDatumlabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Upravi&#x165;"/>
+        <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
       </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="upravitButtonActionPerformed"/>
-      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="MestoLabel">
       <Properties>
@@ -170,7 +168,7 @@
         <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="KrajinaLabel">
+    <Component class="javax.swing.JLabel" name="KrajinaLabel1">
       <Properties>
         <Property name="text" type="java.lang.String" value="Krajina:"/>
       </Properties>
@@ -186,16 +184,6 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="ZobrazPamiatkaLabel">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="datumLabel">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="D&#xe1;tum:"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="ZobrazDatumlabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
       </Properties>
@@ -244,6 +232,22 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Nav&#x161;t&#xed;ven&#xe9;"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="okButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="OK"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="okButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="upravitButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Upravi&#x165;"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="upravitButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
