--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/ZobrazitTuristikaForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/ZobrazitTuristikaForm.form
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -23,10 +23,10 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
-              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
+                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="KrajinaLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="CielLabel" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -35,59 +35,55 @@
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="ZobrazKrajinalabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="ZobrazCielLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazCielLabel" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazKrajinalabel" min="-2" max="-2" attributes="0"/>
                           <Component id="ZobrazDatumLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="ZobrazTypLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazTypLabel" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <Component id="PrejdeneCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="PrejdeneCheckBox" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="HodnotenieLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="TrasaLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="PoznámkyLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="ZobrazTrasaLabel" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazHodnotenieLabel" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazPoznámkylabel" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
                       <Component id="okButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="upravitButton" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" attributes="0">
-                      <Component id="PoznámkyLabel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="ZobrazPoznámkylabel" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Group type="102" attributes="0">
-                          <Component id="HodnotenieLabel" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Component id="ZobrazHodnotenieLabel" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" attributes="0">
-                          <Component id="TrasaLabel" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-                          <Component id="ZobrazTrasaLabel" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
               </Group>
-              <EmptySpace pref="63" max="32767" attributes="0"/>
+              <EmptySpace pref="22" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="KrajinaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="ZobrazKrajinalabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="TrasaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="ZobrazTrasaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="CielLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ZobrazCielLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="HodnotenieLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="ZobrazHodnotenieLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="CielLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="ZobrazCielLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -107,28 +103,12 @@
                   <Component id="okButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="upravitButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="36" max="32767" attributes="0"/>
+              <EmptySpace pref="32" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JButton" name="okButton">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="OK"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="okButtonActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="upravitButton">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Upravi&#x165;"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="upravitButtonActionPerformed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JLabel" name="KrajinaLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Krajina:"/>
@@ -174,24 +154,19 @@
         <Property name="text" type="java.lang.String" value="Trasa:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="ZobrazTrasaLabel">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JLabel" name="HodnotenieLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Hodnotenie:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="ZobrazHodnotenieLabel">
+    <Component class="javax.swing.JLabel" name="ZobrazTrasaLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="PrejdeneCheckBox">
+    <Component class="javax.swing.JLabel" name="ZobrazHodnotenieLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Prejden&#xe9;"/>
+        <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="Pozn&#xe1;mkyLabel">
@@ -203,6 +178,27 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JCheckBox" name="PrejdeneCheckBox">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Prejden&#xe9;"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="okButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="OK"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="okButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="upravitButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Upravi&#x165;"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="upravitButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
