--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/ZobrazitViacdnovyVyletForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/ZobrazitViacdnovyVyletForm.form
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -23,18 +23,18 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="103" groupAlignment="1" attributes="0">
+                          <Group type="103" alignment="0" groupAlignment="1" attributes="0">
                               <Component id="UbytovanieLabel" alignment="1" min="-2" max="-2" attributes="0"/>
                               <Component id="Krajinalabel" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="MestoLabel" min="-2" max="-2" attributes="0"/>
-                          <Component id="DatumodLabel" min="-2" pref="33" max="-2" attributes="0"/>
-                          <Component id="doLabel" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="MestoLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="DatumodLabel" alignment="0" min="-2" pref="33" max="-2" attributes="0"/>
+                          <Component id="doLabel" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -45,17 +45,14 @@
                           <Component id="ZobrazUbytovnieLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="125" max="-2" attributes="0"/>
-                      <Component id="okButton" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="okButton" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="upravitButton" min="-2" max="-2" attributes="0"/>
-                  <Group type="102" attributes="0">
+                  <Component id="upravitButton" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="PoznámkzLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="ProgramLabel" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -69,97 +66,84 @@
                           </Group>
                       </Group>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="ZobrazTypLabel" min="-2" max="-2" attributes="0"/>
-                          <Component id="ZobrazProgramLabel" min="-2" max="-2" attributes="0"/>
-                          <Component id="ZobrazPoznamkyLabel" min="-2" max="-2" attributes="0"/>
-                          <Component id="ZobrazHodnotenieLabel" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazTypLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazProgramLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazPoznamkyLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazHodnotenieLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <Component id="NavstiveneCheckBox" min="-2" max="-2" attributes="0"/>
+                  <Component id="NavstiveneCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="32" max="32767" attributes="0"/>
+              <EmptySpace pref="39" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="Krajinalabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ZobrazKrajinaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="Hodnotenielabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ZobrazHodnotenieLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="Hodnotenielabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazHodnotenieLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="PoznámkzLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazPoznamkyLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="ProgramLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazProgramLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="TypLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazTypLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="NavstiveneCheckBox" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="upravitButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="okButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="Krajinalabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazKrajinaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="MestoLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazMestolabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="DatumodLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazOdLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="doLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazDolabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="UbytovanieLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazUbytovnieLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="MestoLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ZobrazMestolabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="PoznámkzLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ZobrazPoznamkyLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="DatumodLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ZobrazOdLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ProgramLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ZobrazProgramLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="doLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ZobrazDolabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="TypLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ZobrazTypLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="UbytovanieLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ZobrazUbytovnieLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="NavstiveneCheckBox" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="okButton" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="upravitButton" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace pref="29" max="32767" attributes="0"/>
+              <EmptySpace pref="23" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JButton" name="okButton">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="OK"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="okButtonActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="upravitButton">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Upravi&#x165;"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="upravitButtonActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JLabel" name="Krajinalabel">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Krajina:"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="ZobrazKrajinaLabel">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="MestoLabel">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Mesto:"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JLabel" name="ZobrazMestolabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
@@ -195,19 +179,19 @@
         <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="Hodnotenielabel">
+    <Component class="javax.swing.JLabel" name="Krajinalabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Hodnotenie:"/>
+        <Property name="text" type="java.lang.String" value="Krajina:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="ZobrazHodnotenieLabel">
+    <Component class="javax.swing.JLabel" name="ZobrazKrajinaLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="Pozn&#xe1;mkzLabel">
+    <Component class="javax.swing.JLabel" name="MestoLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Pozn&#xe1;mky:"/>
+        <Property name="text" type="java.lang.String" value="Mesto:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="ZobrazPoznamkyLabel">
@@ -241,6 +225,37 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="NavstiveneCheckBoxActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="upravitButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Upravi&#x165;"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="upravitButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="Hodnotenielabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Hodnotenie:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="ZobrazHodnotenieLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="Pozn&#xe1;mkzLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Pozn&#xe1;mky:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="okButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="OK"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="okButtonActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
